--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand"></a>
+            <a class="navbar-brand"><img src="midia/logoirandy.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse mx-auto justify-content-center" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-linkr" href="#">HOME</a>
+                  <a class="nav-linkr" href="index.html">HOME</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-linkr" href="#">CURSOS</a>
+                  <a class="nav-linkr" href="#cursos">CURSOS</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-linkr" href="#">CONTATOS</a>
+                  <a class="nav-linkr" href="#foot">CONTATOS</a>
                 </li>
               </ul>
             </div>
@@ -40,7 +40,7 @@
     </header>
 
     <main>
-      <div class="curso-div-transporte-publico">
+      <div class="curso-div-transporte-publico" id="cursos">
         <div class="container">
           <div>
             <div class="text-center">
@@ -53,7 +53,7 @@
               <p>O curso de transporte coletivo é projetado para fornecer treinamento e habilidades práticas necessárias para se tornar um motorista de ônibus ou outro veículo de transporte público.</p>
               <p>Curso: 50h/aula <br>Atualização: 16h/aula</p>
               <div>
-                <a href="#" class="btn btn-warning">SABER MAIS</a>
+                <a href="https://api.whatsapp.com/send?phone=5517981402232&text=Ol%C3%A1,%20tenho%20interesse%20em%20saber%20mais%20sobre%20os%20cursos%20em%20seu%20site!" class="btn btn-warning">SABER MAIS</a>
               </div>
             </div>
           </div>
@@ -72,72 +72,111 @@
               <p>Transporte escolar é uma formação técnica destinada a capacitar condutores para o transporte de alunos com segurança e qualidade.</p>
               <p>Curso: 50h/aula <br>Atualização: 16h/aula</p>
               <div>
-                <a href="#" class="btn btn-warning">SABER MAIS</a>
+                <a href="https://api.whatsapp.com/send?phone=5517981402232&text=Ol%C3%A1,%20tenho%20interesse%20em%20saber%20mais%20sobre%20os%20cursos%20em%20seu%20site!" class="btn btn-warning">SABER MAIS</a>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="curso-div">
+      <div class="curso-div-transporte-perigoso">
         <div class="container">
           <div>
             <div class="text-center">
-              <img class="logo-curso" src="midia/transporte_coletivo_logo.png" alt="">
+              <img class="logo-curso" src="midia/logo_transporte_perigoso.png" alt="">
             </div>
           </div>
           <div class="text-center text-descri">
             <h3 class="titulo-curso">TRANSPORTE DE PRODUTOS PERIGOSOS</h3>
             <div class="div-desci">
               <p>O curso de transporte de produtos perigosos é uma formação técnica destinada a capacitar motoristas e transportadores a conduzir com segurança veículos que transportam materiais classificados como perigosos, tais como combustíveis, produtos químicos, explosivos, entre outros.</p>
+              <p>Curso: 50h/aula <br>Atualização: 16h/aula</p>
               <div>
-                <a href="#" class="btn btn-warning">SABER MAIS</a>
+                <a href="https://api.whatsapp.com/send?phone=5517981402232&text=Ol%C3%A1,%20tenho%20interesse%20em%20saber%20mais%20sobre%20os%20cursos%20em%20seu%20site!" class="btn btn-warning">SABER MAIS</a>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="curso-div">
+      <div class="curso-div-transporte-emergencia">
         <div class="container">
           <div>
             <div class="text-center">
-              <img class="logo-curso" src="midia/transporte_coletivo_logo.png" alt="">
+              <img class="logo-curso" src="midia/logo_transporte_emergencia.png" alt="">
             </div>
           </div>
           <div class="text-center text-descri">
-            <h3 class="titulo-curso">TRANSPORTE COLETIVO DE PASSAGEIROS</h3>
+            <h3 class="titulo-curso">TRANSPORTE DE EMERGÊNCIA</h3>
             <div class="div-desci">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, alias molestiae nulla magni a sunt repellendus officiis veritatis dolores incidunt! Incidunt enim nim sunt non excepturi.</p>
+              <p>O curso de transporte de emergência é uma formação essencial para profissionais que atuam no campo da saúde, como paramédicos, técnicos em enfermagem e enfermeiros, que precisam estar preparados para lidar com situações de urgência e emergência.</p>
+              <p>Curso: 50h/aula <br>Atualização: 16h/aula</p>
               <div>
-                <a href="#" class="btn btn-warning">SABER MAIS</a>
+                <a href="https://api.whatsapp.com/send?phone=5517981402232&text=Ol%C3%A1,%20tenho%20interesse%20em%20saber%20mais%20sobre%20os%20cursos%20em%20seu%20site!" class="btn btn-warning">SABER MAIS</a>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="curso-div">
+      <div class="curso-div-transporte-indivisivel">
         <div class="container">
           <div>
             <div class="text-center">
-              <img class="logo-curso" src="midia/transporte_coletivo_logo.png" alt="">
+              <img class="logo-curso" src="midia/transporte_indivisivel.png" alt="">
             </div>
           </div>
           <div class="text-center text-descri">
-            <h3 class="titulo-curso">TRANSPORTE COLETIVO DE PASSAGEIROS</h3>
+            <h3 class="titulo-curso">TRANSPORTE DE CARCAS INDIVISÍVEIS</h3>
             <div class="div-desci">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, alias molestiae nulla magni a sunt repellendus officiis veritatis dolores incidunt! Incidunt enim nim sunt non excepturi.</p>
+              <p>O curso de transporte de carga indivisível é uma formação especializada para motoristas, operadores de guindaste e outros profissionais que atuam no transporte de cargas que excedem os limites de peso e dimensões permitidos pelas regulamentações de trânsito.</p>
+              <p>Curso: 50h/aula <br>Atualização: 16h/aula</p>
               <div>
-                <a href="#" class="btn btn-warning">SABER MAIS</a>
+                <a href="https://api.whatsapp.com/send?phone=5517981402232&text=Ol%C3%A1,%20tenho%20interesse%20em%20saber%20mais%20sobre%20os%20cursos%20em%20seu%20site!" class="btn btn-warning">SABER MAIS</a>
               </div>
             </div>
           </div>
         </div>
       </div>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum, nostrum. Eius reprehenderit, aliquid veniam deleniti magni, repudiandae aspernatur ad consequatur omnis tempore, odit necessitatibus atque nam? Incidunt autem laudantium officia? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam excepturi ab vel impedit consequuntur optio error vitae illo numquam, autem temporibus esse ipsum explicabo labore. Perspiciatis distinctio nemo amet ipsam. lor 
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati quae id cum delectus expedita fuga, dolorem dolorum commodi architecto tenetur sequi fugiat in, reprehenderit, omnis voluptatem? Ad voluptates deserunt labore. lor
     </main>
 
-    <footer>
+    <footer id="foot">
+      <div>
+        <h2 class="text-center">MODOS DE CONTATO</h2>
+        <div onclick="window.open('https://api.whatsapp.com/send?phone=5517981402232&text=Ol%C3%A1,%20tenho%20interesse%20em%20saber%20mais%20sobre%20os%20cursos%20em%20seu%20site!', '_blank');return false;" class="row div-contato justify-content-around align-items-center" id="contzap">
+          <div class="col-5 text-center">
+              <div>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" aria-colspan="text-center" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+                  <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
+                  </svg>
+              </div>
+              <div>
+                  <p>WHATSAPP</p>
+              </div>
+          </div>
+          <div class="col-7 text-center">
+              <p>(17) 99611 - 3336</p>
+          </div>
+        </div>
 
+        <div onclick="window.open('https://www.instagram.com/autoescolairandy/?igshid=YmMyMTA2M2Y%3D', '_blank');return false;" class="row div-contato justify-content-around align-items-center" id="contins">
+          <div class="col-7 text-center">
+            <p>@autoescolairandy</p>
+          </div>
+          <div class="col-5 text-center">
+              <div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+                  <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
+                </svg>
+              </div>
+              <div>
+                  <p>INSTAGRAM</p>
+              </div>
+          </div>
+        </div>
+        <div class="div-contato" onclick="window.open('https://www.google.com/maps/dir/-21.4781668,-49.2193179/AUTO+ESCOLA+IRANDY+NOVO+HORIZONTE+-+Pc+Pe+Paulo+Lepick,+134+-+Novo+Horizonte,+SP,+14960-000/@-21.4732284,-49.2257086,16z/data=!3m1!4b1!4m18!1m7!3m6!1s0x94be89394f16d55f:0x2168e82d713eac5e!2sAUTO+ESCOLA+IRANDY+NOVO+HORIZONTE!8m2!3d-21.4681371!4d-49.2223033!16s%2Fg%2F1tdx5725!4m9!1m1!4e1!1m5!1m1!1s0x94be89394f16d55f:0x2168e82d713eac5e!2m2!1d-49.2223033!2d-21.4681371!3e0', '_blank');return false;" id="conend">
+          <h4 class="text-center">ENDEREÇO</h4>
+          <div class="text-center"><iframe disabled src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3713.0096730918967!2d-49.22449198505995!3d-21.468137085761967!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94be89394f16d55f%3A0x2168e82d713eac5e!2sAUTO%20ESCOLA%20IRANDY%20NOVO%20HORIZONTE!5e0!3m2!1spt-BR!2sbr!4v1679767627548!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+          <p>Praça PE Paulo Lepick - Nº 134 <br>Novo Horizonte - SP</p>
+        </div>
+      </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@2.9.3/dist/umd/popper.min.js"></script>
