--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
           </div>
           <div class="text-center text-descri">
-            <h3 class="titulo-curso">TRANSPORTE DE CARCAS INDIVISÍVEIS</h3>
+            <h3 class="titulo-curso">TRANSPORTE DE CARGAS INDIVISÍVEIS</h3>
             <div class="div-desci">
               <p>O curso de transporte de carga indivisível é uma formação especializada para motoristas, operadores de guindaste e outros profissionais que atuam no transporte de cargas que excedem os limites de peso e dimensões permitidos pelas regulamentações de trânsito.</p>
               <p>Curso: 50h/aula <br>Atualização: 16h/aula</p>
